# scribe-py

./: .gitignore  AGENTS.md  README.md  _check_defaults.py  _syntax_check.ps1  evolver.db  pyproject.toml
docs/: index.html
memory/: longterm.md  memory_context.md  today.md
scribe/: __init__.py  __main__.py  bookshelf.py  types.py
scribe/agent/: __init__.py  loop.py  loop_guard.py  retry.py  token_counter.py
scribe/api/: __init__.py  state.py
scribe/cli/: __init__.py  main.py  onboarding.py  tui.py  tui_rich.py
scribe/council/: __init__.py  council.py  debate_state.py  distiller.py  editor.py  registry.py  router.py  wizard.py  writer_agent.py
scribe/kernel/: __init__.py  config.py  event_bus.py  session.py
scribe/llm/: __init__.py  anthropic.py  base.py  deepseek.py  openai.py
scribe/memory/: __init__.py  assembler.py  episodic.py  extractor.py  hook_ledger.py  methodology.py  palace.py  persona.py  procedural.py  semantic.py
scribe/tools/: __init__.py  base.py  file_read.py  file_write.py  memory_tool.py  palace_search.py  registry.py  web_fetch.py  web_search.py
tests/: __init__.py  conftest.py  smoke_test.py  test_bookshelf.py  test_config.py  test_hook_ledger.py  test_methodology.py  test_persona.py  test_session.py  test_types.py
tests/agent/: test_loop.py  test_retry.py
tests/api/: test_state.py
tests/cli/: test_main.py  test_onboarding.py  test_tui.py
tests/council/: test_council.py  test_debate_state.py  test_editor.py  test_router.py  test_skill_loader.py  test_wizard.py  test_writer_agent.py
tests/llm/: test_anthropic.py  test_openai.py
(+46 files in other folders)
